# chat-archive-rs

./: Cargo.toml  README.md
src/: collector.rs  commands.rs  crypto.rs  main.rs  secrets.rs  storage.rs  types.rs  utils.rs
src/commands/: backup.rs  lifecycle.rs  mod.rs  monitor.rs  restore.rs  support.rs  verify.rs
tests/: backup_compress.rs  monitor_config.rs  recovery_file_permissions.rs
tests/common/: mod.rs
