[package]
name = "chat-archive-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
zstd = "0.13.3"
